# gedit-collaboration

./: Makefile.am  README  autogen.sh  configure.ac  gedit-collaboration.doap
data/: Makefile.am  gedit-collaboration.schemas.in  org.gnome.gedit.plugins.collaboration.gschema.xml.in.in
po/: POTFILES.in  POTFILES.skip
src/: Makefile.am  collaboration.gedit-plugin.desktop.in.in  collaboration.plugin.desktop.in.in  gedit-collaboration-actions.c  gedit-collaboration-actions.h  gedit-collaboration-bookmark-dialog.c  gedit-collaboration-bookmark-dialog.h  gedit-collaboration-bookmark-dialog.ui  gedit-collaboration-bookmark.c  gedit-collaboration-bookmark.h  gedit-collaboration-bookmarks.c  gedit-collaboration-bookmarks.h  gedit-collaboration-color-button.c  gedit-collaboration-color-button.h  gedit-collaboration-configuration.ui  gedit-collaboration-document-message.c  gedit-collaboration-document-message.h  gedit-collaboration-hue-renderer.c  gedit-collaboration-hue-renderer.h  gedit-collaboration-manager.c  gedit-collaboration-manager.h  gedit-collaboration-password-dialog.ui  gedit-collaboration-plugin.c  gedit-collaboration-plugin.h  gedit-collaboration-undo-manager.c  gedit-collaboration-undo-manager.h  gedit-collaboration-user-store.c  gedit-collaboration-user-store.h  gedit-collaboration-user.c  gedit-collaboration-user.h  gedit-collaboration-window-helper-private.h  gedit-collaboration-window-helper-ui.xml  gedit-collaboration-window-helper.c  gedit-collaboration-window-helper.h  gedit-collaboration-window-helper.ui  gedit-collaboration.c  gedit-collaboration.h
